# codeberg

./: .clang-format  .gitignore  .gitmodules  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  THIRD_PARTY.md  config.example
.cursor/: Dockerfile  environment.json  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
agent/: .env.example  README.md  package-lock.json  package.json  tsup.config.ts
agent/eval/: structural-cases.jsonl
agent/src/: agent.test.ts  agent.ts  cli.ts  generator.ts  index.ts  prompt.test.ts  prompt.ts  types.ts
agent/src/cli/: format.ts  main.ts  search-main.ts  search.test.ts  search.ts
agent/src/core/: agent.test.ts  agent.ts  cache.test.ts  cache.ts  client.test.ts  client.ts  compaction.test.ts  compaction.ts  config.ts  entry.test.ts  entry.ts  evidence-extract.test.ts  evidence-extract.ts  evidence.test.ts  evidence.ts  format.ts  generator.ts  history.test.ts  history.ts  loop.test.ts  loop.ts  message.test.ts  message.ts  paths.ts  prompt.test.ts  prompt.ts  search-hit.test.ts  search-hit.ts  session.test.ts  session.ts  title.test.ts  title.ts  types.ts
agent/src/providers/: builtin.test.ts  builtin.ts  index.ts  profiles.test.ts  profiles.ts  registry.test.ts  registry.ts
agent/src/tui/: app.tsx  commands.test.ts  commands.ts  history.test.ts  history.ts  main.ts  main.tsx  markdown.tsx  session-agent.test.ts  session-agent.ts  session-store.test.ts  session-store.ts
agent/src/web/: main.ts  page.ts  server.test.ts  server.ts  sessions.test.ts  sessions.ts
agent/web-ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
agent/web-ui/src/: App.tsx  index.css
configs/: walk_skip_dirs.txt
core/: CMakeLists.txt  README.md  libcodeberg.pc.in
core/bench/: BENCH_SEARCH.md  CMakeLists.txt  bench.h  bench_chunk_table.c  bench_fingerprint.c  bench_graph.c  bench_search.c  bench_strmap.c  bench_u64map.c
core/cmd/cberg-index/: CMakeLists.txt  indexer.c  indexer.h  ipc.c  ipc.h  main.c  test_engine.c  test_walk.c  walk.c  walk.h
core/docs/: API.md  CBERG_INDEX.md  CORE.md  README.md  TESTING.md  VECTOR_INDEX_PROVIDERS.md
core/docs/adr/: 0001-standalone-c-core.md  0002-watcher-driven-indexing.md  0003-merkle-manifest-change-detection.md  0004-multi-root-engine.md  0005-dual-index-graph.md
core/docs/modules/: README.md  chunk.md  common.md  embed.md  graph.md  manifest.md  search.md  watch.md
core/include/codeberg/: codeberg.h  usearch_ext.h
core/src/chunk/: chunk_keys.c  chunk_keys.h  chunk_kind.c  chunk_kind.h  chunk_table.c  chunker.c
core/src/common/: arena.c  arena.h  binio.h  cacheline.h  config.c  fileio.c  fileio.h  fnv.h  grow.h  hash.c  lang.c  pathutil.c  pathutil.h  status.c  statutil.h  strmap.c  strmap.h  strutil.c  strutil.h  u64map.c  u64map.h  version.c  walk_policy.c  walk_policy.h  walk_skip_dirs_gen.inc
core/src/embed/: embed.c  embed_internal.h  embed_onnx.c  tokenize.c  tokenize.h
core/src/graph/: graph_extract.c  graph_internal.h  graph_store.c  resolve_pkg.c
core/src/manifest/: manifest.c
core/src/search/: http_client.h  index.c  index_config.c  index_internal.h  index_qdrant.c  index_stub.c  index_usearch.c  search.c  usearch_compact.cpp
core/src/search/providers/: common.c  common.h  provider.c  provider.h  registry.c  registry.h
core/src/search/providers/pgvector/: pgvector.c
core/src/search/providers/qdrant/: http_client.c  http_client.h  json_mini.c  json_mini.h  qdrant.c
core/src/search/providers/usearch/: usearch.c
core/src/watch/: watch.c  watch_fsevents.c  watch_inotify.c  watch_internal.h  watch_poll.c  watch_walk.c
core/test/: CMakeLists.txt  index_provider_harness.c  index_provider_harness.h  test_chunk_kind.c  test_chunk_table.c  test_chunker.c  test_common.h  test_config.c  test_embed.c  test_fingerprint.c  test_graph.c  test_graph_common.h  test_graph_extract.c  test_graph_resolve.c  test_hash.c  test_index.c  test_index_providers.c  test_lang.c  test_manifest.c  test_qdrant_json.c  test_search.c  test_smoke.c  test_watch.c  test_watch_events.c
daemon/: .env.example  README.md  go.mod
daemon/cmd/cberg-index/: main.go
daemon/cmd/codeberg-d/: main.go
daemon/docs/: README.md  architecture.md  cberg.md  http.md  indexer.md  ipc.md
daemon/internal/bootstrap/: ready.go  ready_test.go
daemon/internal/cberg/: cberg.go  chunk.go  vector.go  watch.go  watch_test.go
daemon/internal/config/: config.go  config_test.go  roots.go
daemon/internal/domain/: repo.go
daemon/internal/git/: diff.go  diff_test.go  run.go
daemon/internal/gitpull/: gitpull.go
daemon/internal/httpserver/: errors.go  errors_test.go  response.go  server.go  server_test.go  types.go
daemon/internal/indexctl/: client.go  client_test.go  errors.go  indexer.go  ipc.go  transport.go  types.go  wire.go  wire_test.go
daemon/internal/indexer/: indexer.go
daemon/internal/search/: hybrid.go  hybrid_test.go
daemon/internal/subprocess/: errors.go  pipeline.go  sed.go
daemon/internal/supervisor/: supervisor.go  supervisor_test.go
daemon/internal/testutil/: testutil.go  testutil_test.go
daemon/internal/tools/: args.go  default.go  filetools.go  git.go  graphtools.go  graphtools_test.go  indextools.go  indextools_test.go  pipe.go  pipe_test.go  results.go  sed.go  sed_test.go  text.go  tools.go  tools_test.go
daemon/internal/walk/: walk.go
daemon/internal/workspace/: skip.go  skip_gen.go  skip_test.go  workspace.go  workspace_test.go
docs/: README.md  RELEASING.md  agent-accuracy.md  full-intelligence-backend-progress.md  full-intelligence-backend.md  multi-repo-plan.md  multi-repo.md
launcher/: README.md  go.mod  install.sh  update.sh
launcher/cmd/codeberg/: main.go  main_test.go
launcher/internal/bootstrap/: bootstrap.go
launcher/internal/cleanindex/: cleanindex.go
scripts/: build-daemon.sh  fetch-model.sh  format.sh  gen-walk-skip.sh  repos.example.txt  set-version.sh  sync-repos.sh  test-daemon.sh  test-index-providers.sh
(+70 files in other folders)
